--- a/7_FirstProject/css/style.css
+++ b/7_FirstProject/css/style.css
@@ -1,9 +1,13 @@
+@import url('https://fonts.googleapis.com/css?family=Indie+Flower|Merriweather&display=swap');
+
 :root {
   --pBlack: #0a100d;
   --pDarkWhite: #b9baa3;
   --pClearWhite: #d6d5c9;
   --pClearRed: #a22c29;
   --pDarkRed: #902923;
+  --fancyFont: 'Indie Flower', cursive;
+  --mainTransition: all 0.3s ease-in-out; 
 }
 
 body {
@@ -11,4 +15,224 @@ body {
   padding: 0;
   background: var(--pDarkWhite);
   color: var(--pBlack);
+  font-family: 'Merriweather', serif;
+  overflow-x: hidden;
+  
 }
+
+#title{  
+  font-size: 4rem;
+  font-family: var(--fancyFont);
+  letter-spacing: 0.7rem;
+  display: block;
+  margin: 0 100px;
+  animation: slideLeft 2s ease-in-out 1;
+}
+
+.longspacing{
+  letter-spacing: 2rem;
+}
+
+/* Utilities */
+a{
+  text-decoration: none;
+}
+.text-red{
+  color: var(--pClearRed);
+}
+
+.text-center{
+  text-align: center;
+}
+
+.clearFix::before, .clearFix::after{
+  content:"";
+  float: none;
+  display: table;
+}
+/* /Utilities */
+
+
+/* Header */
+
+.header{
+  min-width: 100vw;
+  min-height: 100vh;
+  background: linear-gradient(0deg, var(--pClearWhite), #d6d5c971), url(../img/main-background.jpg) center/cover no-repeat fixed;
+  position: relative;
+  overflow: hidden;
+  box-shadow: 0px 1px 10px #0a100d  ;
+}
+
+.banner{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  text-align: center;
+  transform: translate(-50%,-75%)
+}
+
+.subtitle{
+  display: inline-block;
+  letter-spacing: 1rem;
+  color: var(--pClearWhite);
+  background: var(--pBlack);
+  position: absolute;
+  margin:  -100px 0px 0px -75px;
+  animation: slideRight 2s ease-in-out 1;
+}
+
+.navBtn{
+  display: inline-block;
+  text-decoration: none;
+  color: var(--pClearWhite);
+  padding: 25px 50px;
+  background: var(--pDarkRed);
+  outline: 5px solid var(--pDarkRed);
+  outline-offset: 5px;
+  transition: var(--mainTransition);
+  margin-top: 50px;
+  animation: fadeIn 2s ease-in-out 1;
+}
+.navBtn:hover{
+  background: var(--pClearRed);
+  outline: 5px solid var(--pClearRed);
+  outline-offset: 10px;
+}
+/* /Header */
+
+/* Animation */
+
+@keyframes slideLeft{
+  0%{
+    transform: translateX(-100vw);
+  }
+  75%{
+    transform: translate(10vw);
+  }
+  88%{
+    transform: translate(-2vw);
+  }
+  100%{
+    transform: translateX(0vw);
+  }
+}
+@keyframes slideRight{
+  0%{
+    transform: translateX(100vw);
+  }
+  75%{
+    transform: translate(-10vw);
+  }
+  88%{
+    transform: translate(2vw);
+  }
+  100%{
+    transform: translateX(0vw);
+  }
+}
+@keyframes fadeIn{
+  0%{
+    opacity: 0;
+    transform: scale(2);
+  }
+  100%{
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+/* /Animation */
+
+/* Content Divider */
+
+.contentDivider{
+
+  width: 100vw;
+  height: 20px;
+  margin-bottom: 20px;  
+  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#902923+0,a22c29+15,d6d5c9+50,a22c29+85,902923+100 */
+  background: #902923; /* Old browsers */
+  background: -moz-linear-gradient(left,  #902923 0%, #a22c29 15%, #d6d5c9 50%, #a22c29 85%, #902923 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(left,  #902923 0%,#a22c29 15%,#d6d5c9 50%,#a22c29 85%,#902923 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to right,  #902923 0%,#a22c29 15%,#d6d5c9 50%,#a22c29 85%,#902923 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#902923', endColorstr='#902923',GradientType=1 );
+}
+
+/* Skills section */
+
+.skills{
+  max-width: 100%;    
+}
+
+.skill{
+  width: 100%;
+  height: 250px;
+  float: none;
+  text-align: center;
+  transition: var(--mainTransition);
+}
+
+.skill-icon{
+  display: inline-block;
+  margin: 10px 0px 20px 0px;
+}
+
+.skill-title{
+  display: block;
+  font-size: 1.5rem;
+  letter-spacing: 0.75rem;
+  
+  margin-bottom: 2rem;
+}
+
+.skill-description{
+  /* max-width: 15rem; */
+  min-width: 10rem;
+  margin: 0 auto;
+}
+
+.skill:hover{
+  background: var(--pDarkRed);
+}
+
+.skill:hover .skill-title{
+  color: var(--pDarkWhite);
+  text-shadow: 0px 0px 3px var(--pClearRed);
+}
+.skill:hover .skill-description{
+  color: var(--pDarkWhite);
+}
+
+@media screen and (min-width:576px){
+  .skill{
+    float: left;
+    width: 50%;
+  }
+}
+@media screen and (min-width:1000px){
+  .skill{
+    float: left;
+    width: 25%;
+  }
+}
+/* /Skills */
+/* About */
+.section-center{
+  padding: 550px 0px;
+  width: 80vw;
+  margin: 0 auto;
+  max-width: 1170px;
+}
+
+.about-img-container{
+  width: 100%;
+  overflow: hidden;
+
+}
+.about-img{
+  width: 100%;
+  display: block;
+}
+
+/* /About */
