--- a/7_FirstProject/css/style.css
+++ b/7_FirstProject/css/style.css
@@ -62,9 +62,90 @@ a {
 
 /* /Utilities */
 
+/* Navbar */
+
+.nav-btn {
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  color: var(--pClearRed);
+  margin: 0.5rem;
+  font-size: 2.2rem;
+  animation: bounce 5s ease-in-out infinite;
+  cursor: pointer;
+}
+
+.navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 100%;
+  z-index: 2;
+  background: var(--pBlack);
+  padding-left: 2rem;
+  padding-top: 1rem;
+  transition: var(--mainTransition);
+  transform: translateX(-100%);
+}
+
+.showNav {
+  transform: translateX(0);
+}
+
+.navbar-header {
+  color: var(--pClearWhite);
+}
+
+.nav-close {
+  font-size: 2rem;
+  cursor: pointer;
+}
+
+.nav-items {
+  list-style-type: none;
+  padding-left: 0;
+}
+
+.nav-item > a {
+  display: block;
+  font-size: 3rem;
+  color: var(--pClearRed);
+  transition: var(--mainTransition);
+}
+.nav-item > a:hover {
+  color: var(--pBlack);
+  background: var(--pClearRed);
+  padding-left: 2.5rem;
+}
+
+@media screen and (min-width: 700px) {
+  .navbar {
+    width: 33vw;
+    max-width: 20rem;
+  }
+}
+
+@keyframes bounce {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+/* /Navbar */
+
 /* Header */
 
 .header {
+  padding-top: 4rem;
   min-width: 100vw;
   min-height: 100vh;
   background: linear-gradient(0deg, var(--pClearWhite), #d6d5c971),
@@ -390,3 +471,96 @@ a {
 }
 
 /* /Products */
+
+/* Contact */
+
+.contact {
+  padding-top: 1rem;
+}
+
+.contact-item {
+  margin-bottom: 2rem;
+}
+
+.contact-title {
+  color: var(--pClearRed);
+  font-family: var(--fancyFont);
+  text-transform: uppercase;
+  letter-spacing: 1.5rem;
+  font-size: 1.75rem;
+  margin-bottom: 1rem;
+}
+
+.contact-text {
+  text-transform: uppercase;
+  font-size: 1rem;
+}
+
+.form-control {
+  display: block;
+  width: 100%;
+  border: none;
+  outline: none;
+  border-bottom: 3px var(--pDarkRed) solid;
+  background: var(--pDarkWhite);
+  font-size: 1rem;
+  padding: 1.3rem 0;
+  font-weight: bold;
+}
+
+.form-control::placeholder {
+  font-size: 1.5rem;
+  color: var(--pClearRed);
+  text-transform: uppercase;
+  letter-spacing: 1.2rem;
+}
+
+.contact-extra-padding {
+  padding-bottom: 2rem;
+}
+
+textarea.form-control {
+  resize: none;
+}
+
+.contact-button {
+  display: block;
+  width: 100%;
+}
+
+@media screen and (min-width: 935px) {
+  .contact-info,
+  .contact-form {
+    float: left;
+    width: 45%;
+    padding: 2rem 1.16%;
+  }
+  .products-info {
+    padding: 2rem 2.5%;
+  }
+}
+/* /Contact */
+
+/* Footer */
+.footer {
+  background: var(--pDarkRed);
+  text-align: center;
+  color: var(--pDarkWhite);
+}
+.social-icon {
+  color: var(--pDarkWhite);
+  font-size: 2rem;
+}
+.social-icon:hover {
+  color: var(--pClearWhite);
+}
+
+.footer-text {
+  text-transform: uppercase;
+}
+
+/* /Footer */
+
+.skills-divider {
+  padding-bottom: 3rem;
+}
